Fixed navigation overlapp

--- a/styles/component/logo.css
+++ b/styles/component/logo.css
@@ -1,11 +1,7 @@
 :root {
     --logovis: hidden;
-    --logoh: 50px;
-    --logow: 100px;
 }
 
 #logo {
     visibility: var(--logovis);
-    height: var(--logoh);
-    width: var(--logow);
 }
